Fix spacing issues

--- a/src/styles/form.sass
+++ b/src/styles/form.sass
@@ -157,6 +157,7 @@ form
       gap: 9px
       position: relative
       top: 6px
+      margin-block-start: 12px
       input
         appearance: none
         border-radius: 3px
